--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
 <head>
+  <meta name="viewport" content="initial-scale=1">
   <title>Products</title>
   <link rel="stylesheet" href="global.css">
   <script type="text/javascript" src="global.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Product Manager</h1>
+  </header>
   <%= yield %>
 </body>
 </html>
