Stacked links on home page. Added a return home link to view all   products.

--- a/views/products/all_products.erb
+++ b/views/products/all_products.erb
@@ -1,3 +1,4 @@
+<a href="/home">Return Home</a>
 <h2>All Products</h2>
 <div id="list_all_products">
   <% Product.all.each do |product| %>
@@ -21,4 +22,5 @@
       </td>
     </tr>
   </table>
+  <% end %>
 </div>
