--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
     <a href="/all_products">View All Products</a>
   </p>
   <p>
-    <a href="/add_new_prodoct">Add New Product</a>
+    <a href="/add_product">Add New Product</a>
   </p>
   <p>
     <a href="/edit_product">Edit Product Information</a>
