Tab content was working. Does not work with a separated view for   one product at a time :id. Maybe because page isn't generated   at time website is loaded, where the js and css is loaded.   Error says it can't find css/js files.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <div>
   <p>
-    <a href="/all_products">View All Products</a>
+    <a href="/list_all_products">View All Products</a>
   </p>
   <p>
     <a href="/add_product">Add New Product</a>
