--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="global.css">
   <script type="text/javascript" src="global.js"></script>
 </head>
-<body>
+<body onload="init()">
   <header>
     <h1>Product Manager</h1>
   </header>
