--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
 <head>
   <meta name="viewport" content="initial-scale=1">
   <title>Products</title>
-  <link rel="stylesheet" href="global.css">
-  <script type="text/javascript" src="global.js"></script>
+  <link rel="stylesheet" href="/global.css">
+  <script type="text/javascript" src="/global.js"></script>
 </head>
 <body onload="init()">
   <header>
